--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-rxjs/core": "^0.8.7",
+    "@react-rxjs/utils": "^0.9.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,6 +20,7 @@
     "react-select": "^4.3.1",
     "react-switch": "^6.0.0",
     "react-tiny-popover": "^6.0.10",
+    "rxjs": "^7.5.5",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
